--- a/templates/show.html
+++ b/templates/show.html
@@ -22,7 +22,7 @@
             <td>{{ x.doctor }}</td>
             <td>{{ x.message }}</td>
             <td class="d-flex flex-sm-column">
-                <a href="" class="btn btn-warning mx-2 my-2">EDIT</a>
+                <a href="/edit/{{ x.id }}" class="btn btn-warning mx-2 my-2">EDIT</a>
                 <a href="/delete/{{ x.id }}" class="btn btn-danger mx-2 my-2">DELETE</a>
                 <a href="" class="btn btn-success mx-2 my-2">PAY</a>
             </td>
