add contact form backend

--- a/templates/editcontact.html
+++ b/templates/editcontact.html
@@ -6,7 +6,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
+        <h2>Update Your Contact Details</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -48,24 +48,24 @@
           </div>
 
           <div class="col-lg-6">
-            <form  method="POST">
+            <form  method="POST" action="/updatecontact/{{ contact.id }}">
                 {% csrf_token %}
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <input type="text" name="name" class="form-control" value="{{ contact.name }}" placeholder="Your Name" required="">
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                  <input type="email" class="form-control" name="email" value="{{ contact.email }}" placeholder="Your Email" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  <input type="text" class="form-control" name="subject" value="{{ contact.subject }}" placeholder="Subject" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="4" placeholder="Message" required=""></textarea>
+                  <textarea class="form-control" name="message" rows="4" value="{{ contact.message }}" placeholder="Message" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
@@ -73,7 +73,7 @@
 {#                  <div class="error-message"></div>#}
 {#                  <div class="sent-message">Your message has been sent. Thank you!</div>#}
 
-                  <button type="submit" class="btn btn-outline-primary">Send Message</button>
+                  <button type="submit" class="btn btn-outline-primary">Update Message</button>
                 </div>
 
               </div>
