--- a/templates/showcontact.html
+++ b/templates/showcontact.html
@@ -16,7 +16,7 @@
                 <td>{{ contact.subject }}</td>
                 <td>{{ contact.message }}</td>
                 <td>
-                    <a href="" class="btn btn-outline-warning">EDIT</a>
+                    <a href="/editcontact/{{ contact.id }}" class="btn btn-outline-warning">EDIT</a>
                     <a href="/deletecontact/{{ contact.id }}" class="btn btn-outline-danger">DELETE</a>
                     <a href="" class="btn btn-outline-success">PAY</a>
                 </td>
